required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (5.1-dev, SVN trunk):
-------------------------------------

- Remove C++-style comments and most other warnings thrown by -pedantic (#2598)

- Fix PostGIS transaction behavior in fcgi situations (#2497)

- Improve performance for large shape files (#2282)

- encode WMS parameters correctly (#1296)

- Added alignment option within a scalebar (#2468)

- RFC-42 HTTP Cookie Forwarding (#2566)

- Fixed handling of encrypted connection strings in postgis driver (#2563)

- mapagg.cpp: AGG: add opacity at the style level (#1155)

- mapwms.c: add Cache-Control max-age HTTP header support (#2551)

- mapogcsos.c: support URI encoded procedures correctly (#2547)

- Added support for EMPTY template with WMS GetFeatureInfo (#546)

- Throw an exception if the WCS request does not overlap layer (#2503)

- Acquire TLOCK_PROJ for pj_transform() calls (#2533).

- Fixed problem with large imagemaps generating no output (#2526)

- mapwms.c: make version optional for GetCapabilities again (#2528)

- support URN scheme for components of observed property elements (#2522)

- Fixed gdImagePtr gdPImg memory leak in msSaveImageBufferGD() (#2525)

- mapogcsos.c: handle invalid POST requests (#2521)

- mapogcsos.c: handle ACCEPTVERSIONS parameter (#2515)

- mapwcs.c/mapwcs11.c: s/neighbour/neighbor/g (#2518)

- mapwms.c: relax FORMAT parameter restrictions for GetFeatureInfo (#2517)

- mapwcs.c: support COVERAGE lists for DescribeCoverage (#2508)

- mapwcs.c: fix lonLatEnvelope/@srsName (#2507)

- mapwcs.c: omit VendorSpecificCapabilities (#2506)

- mapwcs.c: test for either resx/resy OR width/height (#2505)
